# automail

./: .gitignore  test_gmail_api.py
backend/: idea.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: batch_processor_agent.py  finance_agent.py  reminder_agent.py  summarizer.py  todo_agent.py  user_rules.txt
backend/app/api/: auth.py  email.py  reply.py  router.py
backend/app/core/: auth.py  config.py
backend/app/db/: database.py  repositories.py
backend/app/models/: __init__.py  email.py
backend/app/services/: batch_processing.py  gmail_client.py
dashboard/: package-lock.json
extension/: background.js  content.css  content.js  iframe.html  iframe.js  manifest.json  popup.css  popup.html  popup.js  styles.css
